--- a/python_flask_docker/templates/index.html
+++ b/python_flask_docker/templates/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>This is a Flask App containerised with Docker</h1>
-    <h2>Hello Python</h2>
+    <h1>List of all running containers:</h1>
+    <h2><span style="white-space: pre-wrap">{{ value }}</span></h2>
 </body>
 </html>
